# AdventOfCode

./: .gitignore
2021/day1/rust/: Cargo.toml  Readme.md
2021/day2/rust/src/: main.rs
2021/day3/rust/: Cargo.toml
2021/day3/rust/src/: main.rs
2021/day4/resources/: test_input.txt
2024/day1/: day1_straitforward.cpp
2024/day2/: day2.cpp  day2.h
2024/day3/: day3.cpp
day1/cpp/: CMakeLists.txt
day1/cpp/include/: day1.h
day1/cpp/src/: day1.cpp
day1/rust/src/: main.rs
day2/rust/: Cargo.toml
day2/rust/src/: main.rs
day3/rust/src/: main.rs
day4/rust/: Cargo.toml
day4/rust/src/: main.rs
